--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -220,7 +220,7 @@
     #+BEGIN_SRC shell :tangle (m/resolve "${m/home.d}/.zsh/post/functions.zsh") :eval never :exports code :comments link
       function rsync_emacs() {
 	  export PKG_ROOT=${HOME}/workspace/7t/disposables/mirrors/emacs
-	  rsync --progress -ravz rsync://stable.melpa.org/packages/ ${PKG_ROOT}/stable-melpa
+	  rsync --progress -ravz rsync://stable.melpa.org/packages/ ${PKG_ROOT}/melpa-stable
 	  rsync --progress -ravz rsync://melpa.org/packages/ ${PKG_ROOT}/melpa
 	  rsync --progress -ravz rsync://elpa.gnu.org/elpa/ ${PKG_ROOT}/gnu
       }
