--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -78,8 +78,25 @@
 		      (when (autoloadp s)
 			(unintern s))))))
 
+      (let* ((verilog-lib (locate-library "verilog-mode")))
+	(if verilog-lib
+	    (if (string-match ".*/lisp/progmodes/.*" verilog-lib)
+		(let* ((verilog-lib-dir (replace-regexp-in-string "\\(.*/lisp/progmodes\\).*" "\\1" verilog-lib)))
+		  (progn
+		    (message verilog-lib-dir)
+		    (delete-file (expand-file-name "verilog-mode.elc" verilog-lib-dir ))
+		    (delete-file (expand-file-name "verilog-mode.el.gz" verilog-lib-dir)))))))
+
+      (mapatoms (lambda (s)
+		  (let ((sn (symbol-name s)))
+		    (when (string-match "^\\(verilog\\)\\(-.*\\)?$" sn)
+		      (setplist s nil)
+		      (unintern s)
+		      ))))
+
+
       (require 'package)
-	      ;;; Install into separate package dirs for each Emacs version, to prevent bytecode incompatibility
+		    ;;; Install into separate package dirs for each Emacs version, to prevent bytecode incompatibility
       (let ((versioned-package-dir
 	     (expand-file-name (format "elpa-%s.%s" emacs-major-version emacs-minor-version)
 			       m/conf.d)))
