--- a/hammers/emacs/chinese.org
+++ b/hammers/emacs/chinese.org
@@ -25,7 +25,7 @@
      (use-package posframe)
      (use-package pyim
        :diminish pyim-isearch-mode
-       :after posframe
+       :requires posframe
        :preface
        (defun m/dict(path)
 	 `(:name ,(file-name-nondirectory path)
@@ -38,12 +38,12 @@
        (use-package pyim-basedict
 	 :ensure t
 	 :config (pyim-basedict-enable))
-     
+
        (setq default-input-method "pyim")
-     
+
        ;; 使用全拼
        (setq pyim-default-scheme 'quanpin)
-     
+
        ;; 设置 pyim 探针设置，这是 pyim 高级功能设置，可以实现 *无痛* 中英文切换 :-)
        ;; 我自己使用的中英文动态切换规则是：
        ;; 1. 光标只有在注释里面时，才可以输入中文。
@@ -54,23 +54,23 @@
 		       pyim-probe-isearch-mode
 		       pyim-probe-program-mode
 		       pyim-probe-org-structure-template))
-     
+
        (setq-default pyim-punctuation-half-width-functions
 		     '(pyim-probe-punctuation-line-beginning
 		       pyim-probe-punctuation-after-punctuation))
        (setq pyim-fuzzy-pinyin-alist '(("en" "eng") ("in" "ing") ("un" "ong")))
-     
+
        ;; 开启拼音搜索功能
        (pyim-isearch-mode 1)
-     
+
        ;; 使用 pupup-el 来绘制选词框, 如果用 emacs26, 建议设置
        ;; 为 'posframe, 速度很快并且菜单不会变形，不过需要用户
        ;; 手动安装 posframe 包。
        (setq pyim-page-tooltip 'posframe)
-     
+
        ;; 选词框显示5个候选词
        (setq pyim-page-length 5)
-     
+
        :bind
        (("M-j" . pyim-convert-string-at-point) ;与 pyim-probe-dynamic-english 配合
 	("C-;" . pyim-delete-word-from-personal-buffer)
@@ -104,7 +104,7 @@
       (use-package liberime
 	:if (eq m/os 'macos)
 	:load-path m/load-path
-	:after pyim
+	:requires pyim
 	:init
 	(setenv "RIME_PATH" (expand-file-name "librime" (expand-file-name "3rdparty" m/conf.d)))
 	:config
